update paper to first draft

--- a/paper/report.bib
+++ b/paper/report.bib
@@ -31,6 +31,40 @@
   file = {/Users/mileslucas/Zotero/storage/XB9URMHT/Astropy Collaboration et al_2018_The Astropy Project.pdf;/Users/mileslucas/Zotero/storage/27A75NZ2/abstract.html}
 }
 
+@article{bezanson2017,
+  title = {Julia: {{A Fresh Approach}} to {{Numerical Computing}}},
+  shorttitle = {Julia},
+  author = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B.},
+  year = {2017},
+  month = jan,
+  journal = {SIAM Rev.},
+  volume = {59},
+  number = {1},
+  pages = {65--98},
+  publisher = {{Society for Industrial and Applied Mathematics}},
+  issn = {0036-1445},
+  doi = {10.1137/141000671},
+  abstract = {Bridging cultures that have often been distant, Julia combines expertise from the diverse fields of computer science and computational science to create a new approach to numerical computing. Julia is designed to be easy and fast and questions notions generally held to be ``laws of nature" by practitioners of numerical computing: \textbackslash beginlist \textbackslash item High-level dynamic programs have to be slow. \textbackslash item One must prototype in one language and then rewrite in another language for speed or deployment. \textbackslash item There are parts of a system appropriate for the programmer, and other parts that are best left untouched as they have been built by the experts. \textbackslash endlist We introduce the Julia programming language and its design---a dance between specialization and abstraction. Specialization allows for custom treatment. Multiple dispatch, a technique from computer science, picks the right algorithm for the right circumstance. Abstraction, which is what good computation is really about, recognizes what remains the same after differences are stripped away. Abstractions in mathematics are captured as code through another technique from computer science, generic programming. Julia shows that one can achieve machine performance without sacrificing human convenience.},
+  keywords = {65Y05,68N15,97P40,Julia,numerical,parallel,scientific computing},
+  file = {/Users/mileslucas/Zotero/storage/357AZK3I/Bezanson et al_2017_Julia.pdf}
+}
+
+@article{bloemhof2004,
+  title = {Remnant {{Speckles}} in a {{Highly Corrected Coronagraph}}},
+  author = {Bloemhof, E. E.},
+  year = {2004},
+  month = jul,
+  journal = {The Astrophysical Journal},
+  volume = {610},
+  pages = {L69-L72},
+  issn = {0004-637X},
+  doi = {10.1086/423172},
+  abstract = {Searches for faint companions to stars may use coronagraphs fed by adaptive optics (AO) systems of very high correction. Sensitivity will be limited by focal plane speckles from residual, uncorrected wave-front errors, so it is important to characterize remnant coronagraphic speckles. A general analysis is presented, illustrated with the classical Lyot coronagraph and the newer four quadrant phase mask scheme. Two kinds of remnant speckles, of distinct symmetry, occur that are closely analogous to those arising in direct imaging at high correction. Properties and typical intensity estimates are presented, which are useful for estimating speckle noise and false companion detection levels and reduction strategies. For realistic parameters describing some current ground-based observations, the novel antisymmetric ``pinned'' speckles, usually neglected even in direct imaging, are nonnegligible in narrowband short exposures. For parameters appropriate to a space-borne coronagraph on the Hubble Space Telescope, these anomalous speckles are in fact dominant close to the star and thus a potentially significant source of false companion detections.},
+  keywords = {Instrumentation: Adaptive Optics,Techniques: High Anular Resolution,Techniques: Image Processing,Turbulence},
+  annotation = {ADS Bibcode: 2004ApJ...610L..69B},
+  file = {/Users/mileslucas/Zotero/storage/S9CIR7CV/Bloemhof - 2004 - Remnant Speckles in a Highly Corrected Coronagraph.pdf}
+}
+
 @article{currie2020,
   title = {On-Sky Performance and Recent Results from the {{Subaru}} Coronagraphic Extreme Adaptive Optics System},
   author = {Currie, Thayne and Guyon, Olivier and Lozi, Julien and Sahoo, Ananya and Vievard, Sebastien and Deo, Vincent and Chilcote, Jeffrey and Groff, Tyler and Brandt, Timothy D. and Lawson, Kellen and Skaf, Nour and Martinache, Frantz and Kasdin, N. Jeremy},
@@ -202,6 +236,20 @@
   file = {/Users/mileslucas/Zotero/storage/G25EPGQB/Norris et al. - 2015 - The VAMPIRES instrument imaging the innermost reg.pdf}
 }
 
+@inproceedings{norris2020,
+  title = {Diffraction-Limited Polarimetric Imaging of Protoplanetary Disks and Mass-Loss Shells with {{VAMPIRES}}},
+  booktitle = {Advances in {{Optical Astronomical Instrumentation}} 2019},
+  author = {Norris, Barnaby R. M. and Tuthill, Peter and Jovanovic, Nemanja and Lozi, Julien and Guyon, Olivier and Cvetojevic, Nick and Martinache, Frantz},
+  year = {2020},
+  month = jan,
+  volume = {11203},
+  pages = {112030S},
+  publisher = {{International Society for Optics and Photonics}},
+  doi = {10.1117/12.2539998},
+  abstract = {Both the birth and death of a stellar system are areas of key scientific importance. Whether it's understanding the process of planetary formation in a star's early years, or uncovering the cause of the enormous mass-loss that takes place during a star's dying moments, a key to scientific understanding lies in the inner few AU of the circumstellar environment. Corresponding to scales of 10s of milli-arcseconds, these observations pose a huge technical challenge due to the high angular-resolutions and contrasts required. A major stumbling block is the problem of the Earth's own atmospheric turbulence. The other difficulty is that precise calibration is required to combat the extremely high contrast ratios and high resolutions faced. By taking advantage of the fact that starlight scattered by dust in the circumstellar region is polarized, differential polarimetry can help achieve this calibration. Spectral features can also be utilized.},
+  file = {/Users/mileslucas/Zotero/storage/SVYQPKIX/Norris et al_2020_Diffraction-limited polarimetric imaging of protoplanetary disks and mass-loss.pdf;/Users/mileslucas/Zotero/storage/TTCG4UM4/12.2539998.html}
+}
+
 @inproceedings{petit2014,
   title = {{{SPHERE eXtreme AO}} Control Scheme: Final Performance Assessment and on Sky Validation of the First Auto-Tuned {{LQG}} Based Operational System},
   shorttitle = {{{SPHERE eXtreme AO}} Control Scheme},
@@ -262,6 +310,34 @@
   keywords = {1234,1684,313,387,68,799,80,Artificial satellites,Astrometry,Astronomical instrumentation,Astronomical techniques,Coronagraphic imaging,Direct imaging,Photometry},
   annotation = {ADS Bibcode: 2020AJ....159..250S},
   file = {/Users/mileslucas/Zotero/storage/H5BB2J9B/Sahoo et al_2020_Precision Photometric and Astrometric Calibration Using Alternating Satellite.pdf}
+}
+
+@article{uyama2020,
+  title = {High-Contrast {{H$\alpha$}} Imaging with {{Subaru}}/{{SCExAO}} + {{VAMPIRES}}},
+  author = {Uyama, Taichi and Norris, Barnaby and Jovanovic, Nemanja and Lozi, Julien and Tuthill, Peter and Guyon, Olivier and Kudo, Tomoyuki and Hashimoto, Jun and Tamura, Motohide and Martinache, Frantz},
+  year = {2020},
+  month = oct,
+  journal = {Journal of Astronomical Telescopes, Instruments, and Systems},
+  volume = {6},
+  pages = {045004},
+  doi = {10.1117/1.JATIS.6.4.045004},
+  abstract = {We present the current status of H{$\alpha$} high-contrast imaging observations with Subaru/Subaru Coronagraphic Extreme Adaptive Optics + VAMPIRES. Our adaptive optics correction at optical wavelengths in combination with (double) spectral differential imaging (SDI) and angular differential imaging (ADI) was capable of resolving a ring feature around omi Cet and detect the H{$\alpha$} counterpart of jet around RY Tau. We tested the post-processing by changing the order of ADI and SDI and both of the contrast limits achieved {$\sim$}10 - 3 to 5 \texttimes{} 10 - 4 at 0.3{${''}$}, which is comparable to other H{$\alpha$} high-contrast imaging instruments in the Southern Hemisphere such as very large telescope (VLT)/spectro-polarimetric high-contrast exoplanet research, VLT/MUSE, and Magellan AO. Current wavefront sensing and adaptive optics correction at optical wavelengths empirically depend on airmass, and Subaru/VAMPIRES provide great opportunities for H{$\alpha$} high-contrast imaging for Northern Hemisphere targets.},
+  keywords = {Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Instrumentation and Methods for Astrophysics,Astrophysics - Solar and Stellar Astrophysics},
+  file = {/Users/mileslucas/Zotero/storage/A6FW6QYT/Uyama et al_2020_High-contrast Hα imaging with Subaru-SCExAO + VAMPIRES.pdf;/Users/mileslucas/Zotero/storage/DL57SMM7/abstract.html}
+}
+
+@inproceedings{vievard2020,
+  title = {Focal Plane Wavefront Sensing on {{SUBARU}}/{{SCExAO}}},
+  booktitle = {Adaptive {{Optics Systems VII}}},
+  author = {Vievard, S. and Bos, S. P. and Cassaing, F. and Currie, T. and Deo, V. and Guyon, O. and Jovanovic, N. and Keller, C. U. and Lamb, M. and Lopez, C. and Lozi, J. and Martinache, F. and Miller, K. and {Montmerle-Bonnefois}, A. and Mugnier, L. M. and N'Diaye, M. and Norris, B. and Sahoo, A. and Sauvage, J.-F. and Skaf, N. and Snik, F. and Wilby, M. J. and Wong, A.},
+  year = {2020},
+  month = dec,
+  volume = {11448},
+  pages = {1261--1277},
+  publisher = {{SPIE}},
+  doi = {10.1117/12.2562787},
+  abstract = {Focal plane wavefront sensing is an elegant solution for wavefront sensing since near-focal images of any source taken by a detector show distortions in the presence of aberrations. Non-Common Path Aberrations and the Low Wind Effect both have the ability to limit the achievable contrast of the finest coronagraphs coupled with the best extreme adaptive optics systems. To correct for these aberrations, the Subaru Coronagraphic Extreme Adaptive Optics instrument hosts many focal plane wavefront sensors using detectors as close to the science detector as possible. We present seven of them and compare their implementation and efficiency on SCExAO. This work will be critical for wavefront sensing on next generation of extremely large telescopes that might present similar limitations.},
+  file = {/Users/mileslucas/Zotero/storage/3GHZMFR6/Vievard et al. - 2020 - Focal plane wavefront sensing on SUBARUSCExAO.pdf;/Users/mileslucas/Zotero/storage/GGUVPTLQ/12.2562787.html}
 }
 
 
