add noise floor to contrast curves

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -125,13 +125,13 @@ A common problem with coronagraphic imaging is accurately determing the flux and
 
 We measured both the relative Lyot stop throughput as well as the off-axis focal plane throughput for our coronagraph. The Lyot stop throughput is proportional to the unobstructed area of the mask compared to the pupil. From the drawings, the ratio of areas is 63.7\%. We measured the throughput using the pupil-imaging camera with the calibration light source, comparing the total intensity measured with a mirror in the pupil wheel (100\% of the incident light) versus the Lyot stop (blocked light only). We calculated a relative throughput of 65.7\%.
 
-The off-axis coronagraphic throughput was measured by gradually moving the focal plane mask off-axis from the calibration source. The fluxes from all of the images were normalized so the maximum off-axis flux was 1 and the on-axis flux was 0 (\autoref{fig:throughput}). Then, these curves were fit with a logistic function, allowing precise determination of the inner working angle (IWA), where the throughput is 50\%. The IWAs for each mask were measured to be \qtylist{36;55;92;129}{\milliarcsecond}, respectively, which is in good agreement with the radii of the masks.
+The off-axis coronagraphic throughput was measured by gradually moving the focal plane mask off-axis from the calibration source. The fluxes from all of the images were normalized so the maximum off-axis flux was 1 and the on-axis flux was 0 (\autoref{fig:throughput}). The inner working angle (IWA) is defined at 50\% throughput. The IWAs for each mask were interpolated from the data as \qtylist{36;55;92;129}{\milliarcsecond}, respectively, which is in good agreement with the radii of the masks.
 
 
 \begin{figure*}
    \centering
    \includegraphics[height=4in]{figures/throughput_curves}
-   \caption{Off-axis coronagraphic throughput for each focal plane mask. The flux throughput is normalized between 0 and 1. 50\% throughput is marked with a black dashed line, and the inner working angles, fit using a logistic function (light gray lines), are denoted by the orange to purple dotted lines.}\label{fig:throughput}
+   \caption{Off-axis coronagraphic throughput for each focal plane mask. The flux throughput is normalized between 0 and 1. 50\% throughput is marked with a black dashed line and the inner working angles are denoted by the orange to purple dotted lines.}\label{fig:throughput}
 \end{figure*}
 
 \section{Results}\label{sec:results}
