update contrast curves

--- a/paper/report.bib
+++ b/paper/report.bib
@@ -1,4 +1,21 @@
 
+@article{akeson2013,
+  title = {The {{NASA Exoplanet Archive}}: {{Data}} and {{Tools}} for {{Exoplanet Research}}},
+  shorttitle = {The {{NASA Exoplanet Archive}}},
+  author = {Akeson, R. L. and Chen, X. and Ciardi, D. and Crane, M. and Good, J. and Harbut, M. and Jackson, E. and Kane, S. R. and Laity, A. C. and Leifer, S. and Lynn, M. and McElroy, D. L. and Papin, M. and Plavchan, P. and Ram{\'i}rez, S. V. and Rey, R. and {von Braun}, K. and Wittman, M. and Abajian, M. and Ali, B. and Beichman, C. and Beekley, A. and Berriman, G. B. and Berukoff, S. and Bryden, G. and Chan, B. and Groom, S. and Lau, C. and Payne, A. N. and Regelson, M. and Saucedo, M. and Schmitz, M. and Stauffer, J. and Wyatt, P. and Zhang, A.},
+  year = {2013},
+  month = aug,
+  journal = {Publications of the Astronomical Society of the Pacific},
+  volume = {125},
+  pages = {989},
+  issn = {0004-6280},
+  doi = {10.1086/672273},
+  abstract = {We describe the contents and functionality of the NASA Exoplanet Archive, a database and toolset funded by NASA to support astronomers in the exoplanet community. The current content of the database includes interactive tables containing properties of all published exoplanets, Kepler planet candidates, threshold-crossing events, data validation reports and target stellar parameters, light curves from the Kepler and CoRoT missions and from several ground-based surveys, and spectra and radial velocity measurements from the literature. Tools provided to work with these data include a transit ephemeris predictor, both for single planets and for observing locations, light curve viewing and normalization utilities, and a periodogram and phased light curve service. The archive can be accessed at http://exoplanetarchive.ipac.caltech.edu.},
+  keywords = {Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Instrumentation and Methods for Astrophysics},
+  annotation = {ADS Bibcode: 2013PASP..125..989A},
+  file = {/Users/mileslucas/Zotero/storage/PDTEL3LV/Akeson et al_2013_The NASA Exoplanet Archive.pdf}
+}
+
 @article{astropycollaboration2013,
   title = {Astropy: {{A}} Community {{Python}} Package for Astronomy},
   shorttitle = {Astropy},
@@ -78,6 +95,25 @@
   keywords = {Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Instrumentation and Methods for Astrophysics},
   annotation = {ADS Bibcode: 2020SPIE11448E..7HC},
   file = {/Users/mileslucas/Zotero/storage/HTJXUC92/Currie et al. - 2020 - On-sky performance and recent results from the Sub.pdf}
+}
+
+@article{currie2022,
+  title = {Images of Embedded {{Jovian}} Planet Formation at a Wide Separation around {{AB Aurigae}}},
+  author = {Currie, Thayne and Lawson, Kellen and Schneider, Glenn and Lyra, Wladimir and Wisniewski, John and Grady, Carol and Guyon, Olivier and Tamura, Motohide and Kotani, Takayuki and Kawahara, Hajime and Brandt, Timothy and Uyama, Taichi and Muto, Takayuki and Dong, Ruobing and Kudo, Tomoyuki and Hashimoto, Jun and Fukagawa, Misato and Wagner, Kevin and Lozi, Julien and Chilcote, Jeffrey and Tobin, Taylor and Groff, Tyler and {Ward-Duong}, Kimberly and Januszewski, William and Norris, Barnaby and Tuthill, Peter and {van der Marel}, Nienke and Sitko, Michael and Deo, Vincent and Vievard, Sebastien and Jovanovic, Nemanja and Martinache, Frantz and Skaf, Nour},
+  year = {2022},
+  month = jun,
+  journal = {Nat Astron},
+  volume = {6},
+  number = {6},
+  pages = {751--759},
+  publisher = {{Nature Publishing Group}},
+  issn = {2397-3366},
+  doi = {10.1038/s41550-022-01634-x},
+  abstract = {Direct images of protoplanets embedded in disks around infant stars provide the key to understanding the formation of gas giant planets such as Jupiter. Using the Subaru Telescope and the Hubble Space Telescope, we find evidence for a Jovian protoplanet around AB Aurigae orbiting at a wide projected separation (\textasciitilde 93\,au), probably responsible for multiple planet-induced features in the disk. Its emission is reproducible as reprocessed radiation from an embedded protoplanet. We also identify two structures located at 430\textendash 580\,au that are candidate sites of planet formation. These data reveal planet formation in the embedded phase and a protoplanet discovery at wide, {$>$}50\,au separations characteristic of most imaged exoplanets. With at least one clump-like protoplanet and multiple spiral arms, the AB Aur system may also provide the evidence for a long-considered alternative to the canonical model for Jupiter's formation, namely disk (gravitational) instability.},
+  copyright = {2022 The Author(s), under exclusive licence to Springer Nature Limited},
+  langid = {english},
+  keywords = {Astrophysical disks,Exoplanets},
+  file = {/Users/mileslucas/Zotero/storage/R78J2N9W/Currie et al. - 2022 - Images of embedded Jovian planet formation at a wi.pdf;/Users/mileslucas/Zotero/storage/U775ZMWC/s41550-022-01634-x.html}
 }
 
 @article{guyon2018,
@@ -250,6 +286,17 @@
   file = {/Users/mileslucas/Zotero/storage/SVYQPKIX/Norris et al_2020_Diffraction-limited polarimetric imaging of protoplanetary disks and mass-loss.pdf;/Users/mileslucas/Zotero/storage/TTCG4UM4/12.2539998.html}
 }
 
+@book{perryman2018,
+  title = {The {{Exoplanet Handbook}}},
+  author = {Perryman, Michael},
+  year = {2018},
+  month = aug,
+  journal = {The Exoplanet Handbook by Michael Perryman},
+  abstract = {With the discovery of planets beyond our solar system 25 years ago, exoplanet research has expanded dramatically, with new state-of-the-art ground-based and space-based missions dedicated to their discovery and characterisation. With more than 3,500 exoplanets now known, the complexity of the discovery techniques, observations and physical characterisation have grown exponentially. This Handbook ties all these avenues of research together across a broad range of exoplanet science. Planet formation, exoplanet interiors and atmospheres, and habitability are discussed, providing in-depth coverage of our knowledge to date. Comprehensively updated from the first edition, it includes instrumental and observational developments, in-depth treatment of the new Kepler mission results and hot Jupiter atmospheric studies, and major updates on models of exoplanet formation. With extensive references to the research literature and appendices covering all individual exoplanet discoveries, it is a valuable reference to this exciting field for both incoming and established researchers.},
+  keywords = {exoplanets},
+  annotation = {ADS Bibcode: 2018exha.book.....P}
+}
+
 @inproceedings{petit2014,
   title = {{{SPHERE eXtreme AO}} Control Scheme: Final Performance Assessment and on Sky Validation of the First Auto-Tuned {{LQG}} Based Operational System},
   shorttitle = {{{SPHERE eXtreme AO}} Control Scheme},
@@ -310,6 +357,17 @@
   keywords = {1234,1684,313,387,68,799,80,Artificial satellites,Astrometry,Astronomical instrumentation,Astronomical techniques,Coronagraphic imaging,Direct imaging,Photometry},
   annotation = {ADS Bibcode: 2020AJ....159..250S},
   file = {/Users/mileslucas/Zotero/storage/H5BB2J9B/Sahoo et al_2020_Precision Photometric and Astrometric Calibration Using Alternating Satellite.pdf}
+}
+
+@article{traub2010,
+  title = {Direct {{Imaging}} of {{Exoplanets}}},
+  author = {Traub, W. A. and Oppenheimer, B. R.},
+  year = {2010},
+  month = dec,
+  journal = {Exoplanets},
+  pages = {111--156},
+  abstract = {A direct image of an exoplanet system is a snapshot of the planets and disk around a central star. We can estimate the orbit of a planet from a time series of images, and we can estimate the size, temperature, clouds, atmospheric gases, surface properties, rotation rate, and likelihood of life on a planet from its photometry, colors, and spectra in the visible and infrared. The exoplanets around stars in the solar neighborhood are expected to be bright enough for us to characterize them with direct imaging; however, they are much fainter than their parent star, and separated by very small angles, so conventional imaging techniques are totally inadequate, and new methods are needed. A direct-imaging instrument for exoplanets must (1) suppress the bright star's image and diffraction pattern, and (2) suppress the star's scattered light from imperfections in the telescope. This chapter shows how exoplanets can be imaged by controlling diffraction with a coronagraph or interferometer, and controlling scattered light with deformable mirrors.},
+  file = {/Users/mileslucas/Zotero/storage/URAUICZS/Traub_Oppenheimer_2010_Direct Imaging of Exoplanets.pdf}
 }
 
 @article{uyama2020,
